<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">马达加斯加在线</string>
    <string name="login_input_phone_tip">请输入0以后的9位号码</string>
    <string name="login_input_phone">请输入手机号</string>
    <string name="login_input_password">请输入密码</string>
    <string name="login_input_smscode">请输入验证码</string>
    <string name="sms_send_success">验证码发送成功</string>
    <string name="getSmscode">获取验证码</string>
    <string name="login_welcome">欢迎登录MGM</string>
    <string name="login">登录</string>
    <string name="smsLogin">验证码登录</string>
    <string name="account_register">账号注册</string>
    <string name="other_login">—— 其他方式登录 ——</string>
    <string name="bind_mobile">绑定手机号</string>
    <string name="register_success">注册成功</string>
    <string name="register_input_nickname">请输入用户名</string>
    <string name="register">注册</string>
    <string name="agreement">注册表示同意</string>
    <string name="home">首页</string>
    <string name="news">看点</string>
    <string name="life">生活</string>
    <string name="friend">朋友</string>
    <string name="my">我的</string>
    <string name="recharge_center">充值中心</string>
    <string name="house_rent">房屋租售</string>
    <string name="employment">求职招聘</string>
    <string name="sales_network">Kiosque网点</string>
    <string name="yellow_page">企业黄页</string>
    <string name="my_nearby_city">马岛服务</string>
    <string name="exchange_rate_inquiry">汇率查询</string>
    <string name="translate_online">在线翻译</string>
    <string name="feedback">用户反馈</string>
    <string name="payment_problem">有偿问答</string>
    <string name="home_nearby_city" tools:ignore="MissingTranslation">同城</string>
    <string name="more">更多</string>
    <string name="hot_news">热门看点</string>
    <string name="get_address">获取位置</string>
    <string name="input_interest_hint">请输入感兴趣的内容</string>
    <string name="comment">评论</string>
    <string name="hava_none_notice">暂无通知</string>
    <string name="pay_notice">支付通知</string>
    <string name="transfer_notice_hint">转账提醒</string>
    <string name="plese_loign">请登录</string>
    <string name="collect">收藏</string>
    <string name="invite_friend">邀请好友</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_publish">我的发布</string>
    <string name="contact_us">联系我们</string>
    <string name="business_admission">商家入驻</string>
    <string name="payment_record">缴费记录</string>
    <string name="bill_record">账单记录</string>
    <string name="all_order">全部订单</string>
    <string name="redpacket_vouchers">红包卡券</string>
    <string name="exit_app">再点击一次退出app</string>
    <string name="unknow">未知</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="man2">男士</string>
    <string name="woman2">女士</string>
    <string name="add_friend">添加好友</string>
    <string name="qr_scan">扫一扫</string>
    <string name="qr_code">收款码</string>
    <string name="nickname">昵称</string>
    <string name="phone_num">手机号</string>
    <string name="friend_desc">未知 福建</string>
    <string name="set_remark">设置备注</string>
    <string name="edit_message">填写信息</string>
    <string name="hitn_input_request_message">请输入验证信息</string>
    <string name="send">发送</string>
    <string name="had_add">已添加</string>
    <string name="add">添加</string>
    <string name="agree_add_friends">同意</string>
    <string name="had_agree_add_friends">已同意</string>
    <string name="no_user">查不到该用户</string>
    <string name="add_fail">添加失败</string>
    <string name="request_had_send">好友请求已发送</string>
    <string name="edit_remark">修改备注</string>
    <string name="hint_input_remark">请输入备注</string>
    <string name="nearby_user">附近的人</string>
    <string name="add_nearby_user">添加附近的用户</string>
    <string name="add_wechat_friend">添加微信好友</string>
    <string name="hint_add_wechat_friend">添加微信中的朋友</string>
    <string name="permission_contacts_message">需要访问您的通讯录，是否允许？</string>
    <string name="permission_location_message">需要使用定位权限，是否允许？</string>
    <string name="invite_desc">便捷生活，从此开始</string>
    <string name="hint_searchf_riend_content">手机号/昵称</string>
    <string name="contacts">通讯录</string>
    <string name="friend_delete_success">好友删除成功</string>
    <string name="transfer">转账</string>
    <string name="send_message1">发消息</string>
    <string name="delete">删除</string>
    <string name="additional_information">附加信息：</string>
    <string name="new_friend">新朋友</string>
    <string name="friend_request">好友请求</string>
    <string name="refund_amount">退款金额</string>
    <string name="refund_party">退款方</string>
    <string name="refund_reasons">退还原因</string>
    <string name="refund_type">退款方式</string>
    <string name="refund_amound">付款金额</string>
    <string name="pay_type">付款方式</string>
    <string name="payment_content">缴费内容</string>
    <string name="receiver">收款方</string>
    <string name="payer">付款方</string>
    <string name="recharge">充值</string>
    <string name="telephone_bill">话费</string>
    <string name="flow">流量</string>
    <string name="eectricity_bill">电费</string>
    <string name="water_bill">水费</string>
    <string name="net_bill">网费</string>
    <string name="bill_detail">账单详情</string>
    <string name="receive_date">到账时间</string>
    <string name="pay_date">付款时间</string>
    <string name="phone_contact">手机通讯录</string>
    <string name="not_your_friend">对方不是您的好友</string>
    <string name="amountofmoney">金额</string>
    <string name="default_package_message">恭喜发财</string>
    <string name="had_agree">已同意</string>
    <string name="had_refuse">已拒绝</string>
    <string name="hint_input_amount">请输入金额</string>
    <string name="transfer_explain">转账说明</string>
    <string name="remark">备注</string>
    <string name="explain">说明</string>
    <string name="reply">回复</string>
    <string name="hint_input_comment">请输入评论内容</string>
    <string name="Tips">提示</string>
    <string name="delete_confirm_message">是否确定删除？</string>
    <string name="copy_success">复制成功</string>
    <string name="rent">租金</string>
    <string name="house_type">户型</string>
    <string name="house_square">面积</string>
    <string name="spublish_person_message">发布人信息</string>
    <string name="copy_wechat">复制微信号</string>
    <string name="spublish_person">发布人</string>
    <string name="contact_type">联系方式</string>
    <string name="wechat">微信</string>
    <string name="communication_language">交流语言</string>
    <string name="house_describe">房屋描述</string>
    <string name="house_describe1">房屋描述(必填)</string>
    <string name="write_comment">写评论</string>
    <string name="all">全部</string>
    <string name="rent_seeking">求租</string>
    <string name="lease">出租</string>
    <string name="ask_for_buy">求购</string>
    <string name="sell">出售</string>
    <string name="unlimited">不限</string>
    <string name="default_text">默认</string>
    <string name="time_decline">时间降序</string>
    <string name="time_escalation">时间升序</string>
    <string name="price_decline">价格降序</string>
    <string name="price_escalation">价格升序</string>
    <string name="spublish">发布</string>
    <string name="spublish_success">发布成功</string>
    <string name="Renting">租房</string>
    <string name="sell_house">售房</string>
    <string name="recruit_message">招聘信息</string>
    <string name="job_wanted_message">求职信息</string>
    <string name="job_describe">职位描述</string>
    <string name="exp_describe">经验描述</string>
    <string name="no_describe">暂无简介</string>
    <string name="wechat_had_copy">微信号已复制</string>
    <string name="job_wanted">求职</string>
    <string name="job_wanted_title">求职标题</string>
    <string name="expected_salary">期望薪水</string>
    <string name="job_wanted_describe">求职描述(必填)</string>
    <string name="recruit">招聘</string>
    <string name="recruit_title">招聘标题</string>
    <string name="budget_salary">预算薪水</string>
    <string name="post_describe">岗位描述(必填)</string>
    <string name="spublish_type">发布类型</string>
    <string name="work_area">工作区域</string>
    <string name="job_type">职位类型</string>
    <string name="gender">性别</string>
    <string name="contact_mobile">联系电话</string>
    <string name="contact_mobile_symbol">联系电话：</string>
    <string name="wechat_code">微信号</string>
    <string name="education">学历</string>
    <string name="work_years">工作经验</string>
    <string name="title">标题</string>
    <string name="area">区域</string>
    <string name="price">价格</string>
    <string name="Contacts">联系人</string>
    <string name="notice_add_second">请勿重复添加</string>
    <string name="housing_resources">房源</string>
    <string name="yellow_page_c">黄页</string>
    <string name="hint_input_translate">请输入翻译内容</string>
    <string name="translate">翻译</string>
    <string name="read_num">阅读量</string>
    <string name="service_type">业务类型</string>
    <string name="life_service">生活服务</string>
    <string name="company_address">企业地址</string>
    <string name="photo">照片</string>
    <string name="detail_describe">详情介绍</string>
    <string name="hint_input_title">请输入标题</string>
    <string name="hint_input_service_tyle">请输入业务类型</string>
    <string name="hint_input_contact">请输入联系人</string>
    <string name="hint_input_contact_phone">请输入联系电话</string>
    <string name="hint_input_company_address">请输入企业地址</string>
    <string name="hint_input_detail_describe">请输入详情介绍</string>
    <string name="my_balance">余额:</string>
    <string name="bank_card">银行卡:</string>
    <string name="me_point">积分:</string>
    <string name="reply_num">条回复</string>
    <string name="invite_code_copy_success">邀请码已复制</string>
    <string name="edit">编辑</string>
    <string name="Rented">设为已租</string>
    <string name="appointed">设为已入职</string>
    <string name="setting">设置</string>
    <string name="Certified">已认证</string>
    <string name="unCertified">未认证</string>
    <string name="Real_name_authentication">实名认证</string>
    <string name="Enterprise_Certification">企业认证</string>
    <string name="my_receive_address">我的收货地址</string>
    <string name="edit_login_password">修改登录密码</string>
    <string name="set_pay_password">设置支付密码</string>
    <string name="check_version">版本检测</string>
    <string name="abount">关于</string>
    <string name="exit_login">退出登录</string>
    <string name="confitm_logout">是否确定退出登录？</string>
    <string name="add_transfer_describe">添加转账说明</string>
    <string name="next">下一步</string>
    <string name="hint_input_friend_phone">输入对方手机号或MGM号</string>
    <string name="personal_message">个人资料</string>
    <string name="Payment_amount">缴费金额</string>
    <string name="Account_number">账户号</string>
    <string name="hint_input_account">输入账户号</string>
    <string name="create_order">创建订单</string>
    <string name="realname">真实姓名</string>
    <string name="hint_input_realname">请输入真实姓名</string>
    <string name="idcode">身份证号</string>
    <string name="hint_input_idcode">请输入身份证号码</string>
    <string name="hint_input_confirm_password">请输入确认密码</string>
    <string name="hint_password_desc">密码必须是6-20位的数字、字符组合(不能纯数字)</string>
    <string name="question">问题</string>
    <string name="hint_input_question">请输入问题</string>
    <string name="answer">答案</string>
    <string name="hint_input_answer">请输入答案</string>
    <string name="hint_question_exam">例：\n\t问题：我的出生年月\n\t答案：1994年7月</string>
    <string name="confirm1">确认</string>
    <string name="mobile_auth">手机号验证</string>
    <string name="identity_auth">身份证验证</string>
    <string name="safe_center">安全中心</string>
    <string name="shielding_friends">加入黑名单</string>
    <string name="set_login_password">设置登录密码</string>
    <string name="password">密码</string>
    <string name="again_password">确认密码</string>
    <string name="privacy">隐私</string>
    <string name="facilitator">服务商</string>
    <string name="xx_facilitator">某某服务商</string>
    <string name="sent_check_code_to_4700">向手机尾号4700发送验证码</string>
    <string name="phone_number">电话号码</string>
    <string name="hint_input_corret_phone_number">输入正确的电话号码</string>
    <string name="question_set_tips">请务必牢记您所填写的答案内容，当您出现换手机、丢密码等安全问题时都须要验证此信息。</string>
    <string name="clear_cache">清除缓存</string>
</resources>