<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@drawable/shape_line"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:showDividers="middle">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/question"
            android:textColor="@color/textColor" />

        <EditText
            android:id="@+id/etQuestion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:hint="@string/hint_input_question"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/answer"
            android:textColor="@color/textColor" />

        <EditText
            android:id="@+id/etAnswer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:hint="@string/hint_input_answer"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/question_set_tips"
        android:textColor="@color/textColorGray"
        android:textSize="12sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/hint_question_exam"
        android:textColor="@color/textColorGray" />

    <TextView
        android:id="@+id/confirm"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="57dp"
        android:background="@drawable/solid_nomal_shape"
        android:gravity="center"
        android:text="@string/confirm1"
        android:textColor="@color/white" />

</LinearLayout>