<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/divider_color"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout style="@style/CommonPaddingStyle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/facilitator"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_right_arrow"
                    android:drawablePadding="6dp"
                    android:text="@string/xx_facilitator"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <LinearLayout style="@style/CommonPaddingStyle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Account_number"
                    android:textColor="@color/textColor" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="end"
                    android:hint="@string/hint_input_account"
                    android:lines="1"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout style="@style/CommonPaddingStyle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone_number"
                    android:textColor="@color/textColor" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="end"
                    android:hint="@string/hint_input_corret_phone_number"
                    android:lines="1"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout style="@style/CommonPaddingStyle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Payment_amount"
                    android:textColor="@color/textColor" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawablePadding="10dp"
                    android:gravity="end"
                    android:hint="@string/hint_input_amount"
                    android:lines="1"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="AR"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvBuyNow"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/solid_nomal_shape"
                android:gravity="center"
                android:text="@string/create_order"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>