<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/ic_back_black" />

        <TextView
            android:id="@+id/toolbar_tv_title"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ivBack"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/set_login_password"
            android:textColor="@color/textColor"
            android:textSize="19sp"
            android:visibility="visible" />

    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/password"
            android:textColor="@color/textColor"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/login_input_password" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/again_password"
            android:textColor="@color/textColor"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/etAgainPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@null"
            android:hint="@string/hint_input_confirm_password" />
    </LinearLayout>

    <TextView
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password_desc"/>

    <Button
        android:id="@+id/btnConfirm1"
        android:layout_width="250dp"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/nearby_city_publish_btn_bg"
        android:text="@string/confirm1"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

</LinearLayout>