<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <View
            android:layout_width="65dp"
            android:layout_height="1dp"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/identity_auth"
            android:textColor="@color/textColor"
            android:textSize="15sp" />

        <View
            android:layout_width="65dp"
            android:layout_height="1dp"
            android:background="@color/textColor" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/realname"
                android:textColor="@color/textColor" />

            <EditText
                android:id="@+id/etRealName"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/stroke"
                android:hint="@string/hint_input_realname"
                android:padding="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvHint2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/idcode"
                android:textColor="@color/textColor" />

            <EditText
                android:id="@+id/etIdCard"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/stroke"
                android:hint="@string/hint_input_idcode"
                android:padding="10dp"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <View
            android:layout_width="65dp"
            android:layout_height="1dp"
            android:background="@color/textColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/mobile_auth"
            android:textColor="@color/textColor"
            android:textSize="15sp" />

        <View
            android:layout_width="65dp"
            android:layout_height="1dp"
            android:background="@color/textColor" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/tvHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sent_check_code_to_4700"
                android:textColor="@color/textColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/stroke"
                android:gravity="center_vertical">


                <EditText
                    android:id="@+id/etSmsCode"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/login_input_smscode"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvGetSmsCode"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/getSmscode"
                    android:textColor="@color/textColorAccent" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/confirm"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="57dp"
        android:background="@drawable/solid_shape_red"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="@color/white" />

</LinearLayout>